--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,44 +1,91 @@
 body {
     width: 960px;
     margin: 0 auto 0 auto;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 header {
     background: #646464;
-    border-color: #727272;
+    border-color: black;
     border-bottom: solid;
     border-width: 2.5px;
-    padding: 20px;
+    height: 100px;
+}
+
+a {
+
 }
 
 h1 {
-    margin-left: 20px;
-    padding: 15px;
+    text-decoration: underline;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+   
 }
 
-p {
-    margin-left: 20px;
+h2{
+    text-decoration: underline;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+.header {
+    float: right;
+}
+
+.github {
+    float: left;
+    margin-right: 10px;
+    margin-left: 17px;
+}
+
+.linkedin {
+    float: left;
+    margin-right: 10px;
+}
+
+.stack {
+    float: left;
+}
+
+.container {
+    clear: both;
+    height: 400px;
 }
 
 #name {
-    text-align: center;
     color: crimson;
-    font-size: 200;
+    font-size: 50px;
+    position: relative;
+    left: 0;
+    top: 0;
 }
 
 #About-Me {
     background: white;
-    width: 440px;
-    height: 300px;
-    margin-left: 20px;
-    float; left 
+    color: #727272;
+    width: 50%;
+    float: left;
+    margin-right: 50px;
+    margin-left: 90px;
+    border: ;
 }
 
 #Connect {
-    width: 275px;
-    height: 150px;
+    color: #727272;
+    width:250px;
+    height: 200px;
     background: white;
-    float: right;
+    float: left;
+    text-align: center;
+    border: ;
+}
+
+#Contact {
+    background: white;
+    width: 30%;
+    padding: 55px;
+    float: left;
+    margin-right: 50px;
+    margin-left: 150px;
 }
 
 footer {
@@ -47,28 +94,18 @@ footer {
     border-color: #727272;
     border-top: solid;
     border-width: 2.5px;
-    padding: 20px;
+    height: 75px;
     margin: 0 auto 0 auto;
     text-align: center;
 }
 
-
-
-
-
-
-
-
+.Contact-form {
+    padding: 55px;
+    width: 30%;
+}
 /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */  
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+    width: 30%; /* Full width */resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
 /* Style the submit button with a specific background color etc */
