--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,102 +1,156 @@
 body {
-    width: 960px;
-    margin: 0 auto 0 auto;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    box-sizing: border-box;
+    background-image: url(../images/sayagata.png);
 }
 
-header {
-    background: #646464;
-    border-color: black;
+#header {
+    background: #ffffff;
     border-bottom: solid;
-    border-width: 2.5px;
-    height: 100px;
+    border-color: #cccccc;
+    height: 75px;
+    width: 100%;
+}
+
+#container {
+    width: 960px;
+    height: 400px;
+    margin: auto;
 }
 
 a {
+    text-decoration: none;
+    color: #666666
+}
 
+img {
+    margin-right: 19.5px;
 }
 
 h1 {
-    text-decoration: underline;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-   
-}
-
-h2{
-    text-decoration: underline;
+    background: #4aaaa5;
+    color: white;
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-.header {
+h2 {
+    color: #4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    margin-left: 19.5px;
+    font-size: 30px;
+}
+
+#h2 {
+    width: 630px;
+    height: 30px;
+    border-bottom: solid;
+    border-color: #666666;
+    border-width: 2px;
+    margin: auto;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+#h3 {
+    width: 250px;
+    height: 30px;
+    border-bottom: solid;
+    border-color: #666666;
+    border-width: 2px;
+    margin: auto;
+}
+
+h3 {
+    text-align: center;
+    color: #4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 20px;
+    margin-top: 10px
+}
+
+.links {
+    text-align: center;
+    color: #cccccc;
     float: right;
+    width: 270px;
+    margin-top: 30px;
 }
 
 .github {
+    clear: both;
     float: left;
-    margin-right: 10px;
-    margin-left: 17px;
+    width: 64px;
+    margin-right: 19.5px;
+    margin-top: 11px;
+    margin-left: 18px;
 }
 
 .linkedin {
     float: left;
-    margin-right: 10px;
+    width: 64px;
+    margin-right: 19.5px;
+    margin-top: 11px;
 }
 
 .stack {
     float: left;
+    width: 64px;
+    margin-top: 11px;
 }
 
-.container {
+p{
+    height: 85%;
+    line-height: 2;
+    font-size: 10;
+    color: #666666;
+}
+
+#nametag {
+    width: 960px;
+    margin: auto;
+}
+
+#footer {
+    line-height: 4.5;
     clear: both;
-    height: 400px;
+    background: #666666;
+    height: 75px;
+    color: white;
+    text-align: center;
+    border-top: solid;
+    border-color: #4aaaa5;
+    border-width: 6px;
+}
+
+#paragraph {
+    width: 612px;
+    margin: 19.5px;
+}
+
+#Main-Content {
+    margin-right: 40px;
+    background: white;
+    float: left;
+    width: 650px;
+    margin-top: 50px;
+}
+
+#Sidebar {
+    background: white;
+    float: left;
+    width: 270px;
+    margin-top: 50px;
 }
 
 #name {
-    color: crimson;
-    font-size: 50px;
-    position: relative;
-    left: 0;
-    top: 0;
-}
-
-#About-Me {
-    background: white;
-    color: #727272;
-    width: 50%;
-    float: left;
-    margin-right: 50px;
-    margin-left: 90px;
-    border: ;
-}
-
-#Connect {
-    color: #727272;
-    width:250px;
-    height: 200px;
-    background: white;
-    float: left;
+    display: inline;
+    font-size: 35px;
     text-align: center;
-    border: ;
-}
-
-#Contact {
-    background: white;
-    width: 30%;
-    padding: 55px;
-    float: left;
-    margin-right: 50px;
-    margin-left: 150px;
-}
-
-footer {
-    clear: all;
-    background: #646464;
-    border-color: #727272;
-    border-top: solid;
-    border-width: 2.5px;
-    height: 75px;
-    margin: 0 auto 0 auto;
-    text-align: center;
+    line-height: 2.1;
+    background: #4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    padding: 18px;
+    margin: 0 auto;
 }
 
 .Contact-form {
@@ -124,7 +178,7 @@ input[type=submit]:hover {
 }
 
 /* Add a background color and some padding around the form */
-.container {
+.container-form {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
