--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     box-sizing: border-box;
     background-image: url(../images/sayagata.png);
+    color: #777777;
 }
 
 #header {
@@ -25,6 +26,11 @@ a {
 
 img {
     margin-right: 19.5px;
+}
+
+#img1 {
+    margin-bottom: 19.5px;
+    margin-right: 22px;
 }
 
 h1 {
@@ -127,12 +133,22 @@ p{
     margin: 19.5px;
 }
 
+#Portfolio {
+    width: 550px;
+    height: 700px;
+    margin: auto;
+    padding-top: 50px;
+}
+
 #Main-Content {
-    margin-right: 40px;
+    margin-right: 20px;
     background: white;
     float: left;
     width: 650px;
     margin-top: 50px;
+    margin-bottom: 50px;
+    border: solid;
+    border-color: #dddddd;
 }
 
 #Sidebar {
@@ -140,6 +156,8 @@ p{
     float: left;
     width: 270px;
     margin-top: 50px;
+    border: solid;
+    border-color: #dddddd;
 }
 
 #name {
@@ -157,12 +175,11 @@ p{
     padding: 55px;
     width: 30%;
 }
-/* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
-    width: 30%; /* Full width */resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+    width: 100%; resize: vertical 
+    line-height 2px;
 }
 
-/* Style the submit button with a specific background color etc */
 input[type=submit] {
     background-color: #4CAF50;
     color: white;
@@ -172,12 +189,10 @@ input[type=submit] {
     cursor: pointer;
 }
 
-/* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
     background-color: #45a049;
 }
 
-/* Add a background color and some padding around the form */
 .container-form {
     border-radius: 5px;
     background-color: #f2f2f2;
