--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -153,7 +153,7 @@ p{
 
 #Sidebar {
     background: white;
-    float: left;
+    float: right;
     width: 270px;
     margin-top: 50px;
     border: solid;
